--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>A VIAGEM <br> DE CHIHIRO</h1>
             <p>Chihiro chega a um mundo mágico dominado por <br>uma bruxa. 
                 Aqueles que a desobedecem são <br> transformados em animais.</p>
-            <div><button>Assistir Agora</button>
+            <div class="butoes"><button>Assistir Agora</button>
                 <button>Assistir o Trailer</button></div>
         </div>
         <div class="imagemdd">
